# resume-agent

./: .gitignore  Makefile  README.md  app.py  google_auth.py  google_docs.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sample_jd.txt  simple_messenger.ipynb  test_google_docs.py  validate_app.py
activate/: pyvenv.cfg
api/: main.py
api/routers/: __init__.py  auth.py  (+4 more)
chrome_extension/: README.md  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
docs/: AGENT.md  BOOTSTRAP.md  SKILLS.md  discovery_feature.md  local_first_rearchitecture_plan.md  strategy_brief_handoff.md  use_case.md
frontend/: index.html  package-lock.json  package.json
resume_agent/: __init__.py  config.py
scripts/: jd_extraction_smoke.py  run_resume_agent.py  scaffold_skill.py  setup_env.py  suggest_skills.py  test_groq_debug.py  update_env.py
skills/: README.md  manifest.json
tests/: conftest.py  test_application_tracker.py  test_applications_api.py  test_archetype_strategy.py  test_ats_scorer_agent.py  test_backend_api_integration.py  test_cache_integration.py  test_cache_store.py  test_comparison_integration.py  test_discover_api.py  test_fit_evaluator.py  test_frontend_e2e.py  test_frontend_playwright.py  test_google_docs.py  test_integration_e2e.py  test_jd_extraction_agent.py  test_llm_service.py  test_memory.py  test_models.py  test_multi_agent_workflow.py  test_resume_quality_agent.py  test_resume_tailor_agent.py  test_resume_versioning.py  test_review_bundle.py  test_skill_recommender.py  test_strategy_api.py  test_strategy_brief_service.py  test_tailor_resume.py  test_ui_integration.py  test_user_store.py  test_workflow_integration.py
(+98 files in other folders)
